--- a/Easynvest.Extrato/docker-compose.yml
+++ b/Easynvest.Extrato/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 services:
-  apicontagem-2-2:
-    image: apicontagem-sdk-2-2
+  extrato-3-1:
+    image: extrato-sdk-3-1
     build:
       context: .
     ports:
